# acf-sdk

./: .gitignore  IMPLEMENTATION.md  Makefile  README.md  demo.py  docker-compose.yml  final_test.py  go.mod  go.work  security.py  security_audit.py  test_kernel.py  test_multi_vector.py  test_sdk.py  test_signed_payload.py
acf_sdk/: client.py
cmd/sidecar/: Dockerfile  Makefile  build.bat  main.go
cmd/sidecar/testdata/: sample_payload.json
config/: sidecar.example.yaml
docs/: architecture.md  phase1.md
internal/kernel/: scanner.go  scanner_test.go
internal/protocol/: flags.go
pkg/kernel/: go.mod  hygiene.go  scanner.go
pkg/kernel/hooks/: context.go
policies/tests/: context_test.rego  memory_test.rego  prompt_test.rego  tool_test.rego
policies/v1/: context.rego  memory.rego  prompt.rego  tool.rego
policies/v1/data/: jailbreak_patterns.json  policy_config.yaml
python/src/acf_sdk/: __init__.py  client.py  middleware.py
sdk/python/: pyproject.toml
sdk/python/acf/: __init__.py  client.py  firewall.py  frame.py  models.py  transport.py
sdk/python/acf/adapters/: __init__.py  langchain.py  langgraph.py
sdk/python/tests/: test_frame.py  test_models.py  test_transport.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: firewall.ts  frame.ts  index.ts  models.ts  transport.ts
sidecar/: go.mod  go.sum
sidecar/cmd/sidecar/: main.go
sidecar/internal/crypto/: hmac.go  hmac_test.go  nonce.go  nonce_test.go
sidecar/policies/: main.rego
tests/integration/: adversarial_payloads.json  harness_test.go
(+28 files in other folders)
